--- a/essays/poetry/build.css
+++ b/essays/poetry/build.css
@@ -5,12 +5,40 @@
     list-style: none;
 }
 
+body {
+    background-color: rgb(54, 54, 54);
+}
+body::after {
+    position: fixed;
+    top: 0;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(
+      0deg,
+      rgb(197,241,161) 0px,
+      rgb(197,241,161) 1px,
+      transparent 2px,
+      transparent 10px
+    ),linear-gradient(
+        90deg,
+        rgb(197,241,161) 0px,
+        rgb(197,241,161) 1px,
+        transparent 2px,
+        transparent 10px
+      );
+      background-size: 20px 20px;
+    opacity: 0.1;
+    z-index: -111;
+}
+
 .top {
     z-index:1001;
     position:absolute;
     text-align:center;
     background-color: rgb(70, 70, 70);
-    width:91.3%;
+    width:91.8%;
     padding:3px;
     opacity:0.6;
     
@@ -19,10 +47,10 @@
     color:rgb(255, 255, 255);
     font-size:30px;
     text-shadow:3px 3px 1px #141414;
-    font-family: "poor richard";
+    font-family: "consolas";
 }
 .toptx a {
-    color:white;
+    color:rgb(197,241,161);
 }
 
 .i {
@@ -144,96 +172,4 @@
 }
 #icolist li:hover {
     opacity:1;
-}
-
-.artic h3{
-    font-family: "poor richard";
-    margin:50px 0 0 0px;
-    padding:0 0 0 30px;
-    width:97.6%;
-    background-color: rgb(118, 156, 103);
-    font-size:60px;
-    color:#d0e9aa;
-    text-shadow:1px 1px 6px black;
-}
-
-#atc {
-    display:flex;
-    justify-content: space-around;
-    align-items: space-around;
-}
-
-#atc li {
-    margin:5px 0 0 0;
-    float:left;
-    width:20%;
-    text-align:left;
-    font-family:"poor richard";
-    padding:20px;
-    background-color: rgb(99, 128, 88);
-    border-radius:20px;
-    font-size:30px;
-    border: solid 1px white ;
-}
-
-#atc img {
-    width:250px;
-    height:200px;
-    border-radius: 20px;
-    padding:0;
-}
-#atc img:hover {
-    opacity:0.7;
-}
-
-#atc a {
-    color:#d0e9aa;
-    text-shadow:1px 1px 6px black;
-}
-
-
-
-.psnl h3{
-    font-family: "poor richard";
-    margin:25px 0 0 0px;
-    padding:0 0 0 30px;
-    width:97.6%;
-    background-color: rgb(50, 51, 49);
-    font-size:60px;
-    color:#ffffff;
-    text-shadow:1px 1px 6px black;
-}
-
-#psl {
-    display:flex;
-    justify-content: space-around;
-    align-items: space-around;
-}
-
-#psl li {
-    margin:5px 0 0 0;
-    float:left;
-    width:20%;
-    text-align:left;
-    font-family:"poor richard";
-    padding:20px;
-    background-color: rgb(55, 56, 55);
-    border-radius:20px;
-    font-size:30px;
-    border: solid 1px white ;
-}
-
-#psl img {
-    width:250px;
-    height:200px;
-    border-radius: 20px;
-    padding:0;
-}
-#psl img:hover {
-    opacity:0.7;
-}
-
-#psl a {
-    color:#ffffff;
-    text-shadow:1px 1px 6px black;
 }
